--- a/package.json
+++ b/package.json
@@ -22,13 +22,14 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-search-autocomplete": "^5.4.4",
+    "react-toastify": "^8.1.0",
     "redux": "^4.0.1",
     "redux-thunk": "^2.3.0",
     "resize-observer-polyfill": "^1.5.1",
     "universal-cookie": "^4.0.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "PORT=4000 react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
