--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@testing-library/user-event": "^7.1.2",
     "axios": "^0.20.0",
     "moment": "^2.29.1",
+    "node-sass": "^4.14.1",
     "npm": "^8.1.4",
     "react": "^16.12.0",
     "react-data-components": "^1.2.0",
@@ -52,6 +53,7 @@
   "devDependencies": {
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
-    "jest-enzyme": "^7.1.2"
+    "jest-enzyme": "^7.1.2",
+    "sass": "^1.45.0"
   }
 }
